--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,6 +1,6 @@
-.content{
-    background-color: rgb(255, 176, 202);
+.footer{
     height: 10vh;
+    background: rgb(233, 238, 157);
     display: flex;
     align-items: center;
     justify-content: center;
