--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -27,6 +27,10 @@ header {
     justify-content: center;
   }
 
+  .lang-choice{
+    color: #868aa0;
+  }
+
   .menus {
     display: flex;
     align-items: center;
