--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,7 +1,48 @@
 .footer{
+    padding-top: 2vh !important;
     height: 10vh;
-    background: rgb(233, 238, 157);
+    display: grid;
+    grid-template-columns: 1fr 1fr;    
+    padding: 0 2.5vw;
+    color: #606060;
+
+    a{
+        color: inherit;
+        font-weight: 600;
+    }
+}
+
+
+.footer-left{
+    display: grid;
+    gap: 1rem;
+    grid-template-rows: 70% 30%;
+
+}
+
+.footer-left-links{
+    padding: 0.5rem 0;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap; 
+    column-gap: 1rem;
+}
+
+.footer-right{
+    display: grid;
+    gap: 1rem;
+    grid-template-rows: 70% 30%;
+}
+
+.footer-right-logo{
+        display: flex;
+        padding: 0.5rem 0;
+        gap: 1rem;
+         img{
+            max-width: 50px;
+            object-fit: cover;
+        }
+}
+
+.footer-left-chyba{
+    font-weight: 400;
 }
