--- a/src/components/homepage/HpHeader.module.scss
+++ b/src/components/homepage/HpHeader.module.scss
@@ -1,12 +1,13 @@
 .hp-header{
-    height: 20vh;
-    background: rgb(178, 227, 247);
+    padding: 5vh 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    flex-direction: column;
+
     input{
         padding: 1rem;
+        width: clamp(200px, 50%,  600px);
     }
 }
 
