--- a/src/articles/SmallArticle.module.scss
+++ b/src/articles/SmallArticle.module.scss
@@ -1,11 +1,28 @@
 .small-aricle{
     background-color: white;
     display: grid;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 35% 65%;
 }
 
-.small-aricle img{
+.title{
+    padding: 0.4rem;
+    font-size: clamp(0.8rem, 1.2vw, 3rem);
+    color: #816453; 
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.small-aricle-img{
     width: 100%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
+    overflow: hidden;
+}
+
+.date-category{
+    letter-spacing: 0.3px;
+    padding: 0.5rem;
+    font-size: clamp(0.7rem, 1.1vw, 2.8rem);
+    color: #798185; 
 }
