--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -21,4 +21,11 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    max-width: 400px;
 }
+
+/* @media only screen and (min-width: 1200px) {
+    .agendy{ 
+        padding: 2vw 20vw
+    }
+  } */
