--- a/src/articles/BigArticle.module.scss
+++ b/src/articles/BigArticle.module.scss
@@ -12,16 +12,20 @@
 
 .title{
     padding: 0.5rem;
-    font-size: clamp(0.8rem, 1.2vw, 3rem);
+    font-size: clamp(0.8rem, 0.9vw, 1.5rem);
     color: #816453; 
     letter-spacing: 0.5px;
     font-weight: 400;
     line-height: 1.6;
+
+    a{
+        color: inherit;
+    }
 }
 
 .date-category{
     letter-spacing: 0.3px;
     padding: 0.5rem;
-    font-size: clamp(0.7rem, 1.1vw, 2.8rem);
+    font-size: clamp(0.8rem, 0.9vw, 1.5rem);
     color: #798185; 
 }
