--- a/src/articles/SmallArticle.module.scss
+++ b/src/articles/SmallArticle.module.scss
@@ -2,15 +2,8 @@
     background-color: white;
     display: grid;
     grid-template-columns: 35% 65%;
-}
-
-.title{
-    padding: 0.4rem;
-    font-size: clamp(0.8rem, 1.2vw, 3rem);
-    color: #816453; 
-    letter-spacing: 0.5px;
-    font-weight: 400;
-    line-height: 1;
+    justify-content: center;
+    align-items: center;
 }
 
 .small-aricle-img{
@@ -20,9 +13,22 @@
     overflow: hidden;
 }
 
+.title{
+    padding: 0.5rem;
+    font-size: clamp(0.7rem, 0.7vw, 1.3rem);
+    color: #816453; 
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    line-height: 1.6;
+
+    a{
+        color: inherit;
+    }
+}
+
 .date-category{
     letter-spacing: 0.3px;
     padding: 0.5rem;
-    font-size: clamp(0.7rem, 1.1vw, 2.8rem);
+    font-size: clamp(0.7rem, 0.7vw, 1.3rem);
     color: #798185; 
 }
