--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -13,8 +13,9 @@
 
 .agendy h1 {
     padding: 0.3rem;
-    font-size: clamp(1rem, 2vw, 3rem); 
+    font-size: clamp(1rem, 1vw, 1.5rem);
     background-color: white;
+    font-weight: 400;
 }
 
 .agendy-col{
