--- a/src/articles/SmallArticle.module.scss
+++ b/src/articles/SmallArticle.module.scss
@@ -1,21 +1,29 @@
 .small-aricle{
     background-color: white;
     display: grid;
-    grid-template-columns: 35% 65%;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: 40% 60%;
+    min-height: 150px;
 }
 
 .small-aricle-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     overflow: hidden;
 }
 
+.small-article-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .title{
     padding: 0.5rem;
-    font-size: clamp(0.7rem, 0.7vw, 1.3rem);
+    font-size: clamp(0.9rem, 0.8vw, 1.3rem);
     color: #816453; 
     letter-spacing: 0.5px;
     font-weight: 400;
