--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 1rem;
