--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,9 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none !important;
+  border:2px solid rgb(255, 156, 156) !important;
+  box-shadow: 0 0 10px #548ecc;
+}
+
