--- a/src/components/homepage/MainMenu.module.scss
+++ b/src/components/homepage/MainMenu.module.scss
@@ -1,7 +1,8 @@
 .main-menu{
-    
-}
-
-.menu-items{
-
+    padding: 1rem 0;
+    padding-bottom: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
