--- a/src/components/mainMenu_v2/LangChoice.module.scss
+++ b/src/components/mainMenu_v2/LangChoice.module.scss
@@ -1,10 +1,6 @@
-.lang{
-  font-size: clamp(0.9rem,1vw,1.5rem);
-}
-
-/* .menus {
+.menus {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     list-style: none;
-  } */
+  }
