--- a/src/components/mainMenu_v2/MainMenu.module.scss
+++ b/src/components/mainMenu_v2/MainMenu.module.scss
@@ -1,6 +1,9 @@
-.main-menu {
+header {
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     color: #212529;
+  }
+
+.nav-area {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,10 +32,8 @@
   }
 
   .menus {
-    padding-right:6vw;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     list-style: none;
-    gap: 1rem;
   }
