--- a/src/components/mainMenu/MenuItem.module.scss
+++ b/src/components/mainMenu/MenuItem.module.scss
@@ -10,6 +10,9 @@
     border: none;
     background-color: inherit;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu-button-active{
@@ -21,6 +24,7 @@
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     font-weight: bold;
+
 }
 
 .menu-items{
@@ -31,8 +35,9 @@
     width: 15rem; 
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
     z-index: 1;
-    border-radius: 5%;
+    border-radius: 1rem;
     border-top-left-radius: 0;
+
 }
 
 .menu-item{
