--- a/src/components/tabWindow/TabNav.module.scss
+++ b/src/components/tabWindow/TabNav.module.scss
@@ -3,20 +3,25 @@
     align-items: center;
     justify-content: center;
     gap:  1rem;
+    padding-bottom: 2rem;
 }
 
 .arrow{
     color: #f56520;
     padding: 0;
     margin-top: -5px;
+    font-size: 1.5rem;
+    
 }
 
 .button{
+    font-size: clamp(0.9rem,1vw,1.5rem);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+
+    cursor: pointer;
     background-color: #ffffff; 
     color: #000000; 
     text-transform: uppercase;
@@ -30,7 +35,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    
+    font-size: clamp(0.9rem,1vw,1.5rem);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    cursor: pointer;
     padding: 1rem;
     padding-bottom: 0;
     text-transform: uppercase;
