Vymazané v2 pre mainMenu, search, tabWindow. Pridaný nový HpSearch component Upravené MainMenu-pridaný dropdown na lang. Pridané taby do TabWindov + urobené dynamicky.

--- a/src/components/homepage/HpHeader.module.scss
+++ b/src/components/homepage/HpHeader.module.scss
@@ -9,7 +9,9 @@
 .bg-image{
     background-image: url("https://media.istockphoto.com/vectors/abstract-creative-background-vector-id1222376322?k=20&m=1222376322&s=612x612&w=0&h=04zOjE7m93H7XMn3wKXBEyWkUkbqVw2GcWfd-he-_aw=");
     background-size: cover;
-    padding: 2rem 3rem;
+    padding: 1.5rem;
+    max-width: 800px;
+    max-height: 100px;
 }
 
 .hp-header-title{
