--- a/src/components/homepage/HpSearch.module.scss
+++ b/src/components/homepage/HpSearch.module.scss
@@ -2,7 +2,10 @@
     display: flex;
 }
 
-.searchIcon {
+.search-icon {
+    width: 3rem;
+    font-size: 2rem;
+    height: auto;
     color: white;
     background-color: #757993;
     display: grid;
@@ -10,7 +13,8 @@
   }
 
 .combobox-input{
-    padding: 0.5rem 0.75rem;
+    padding: 0.75rem;
+    font-size: 1.2rem;
     background-color: #F3F4F6; 
     width: 100%; 
     outline: 0; 
@@ -22,6 +26,7 @@
     position: absolute;
     background-color: white;
     padding: 0.5rem;
+    font-size: 1.2rem;
     z-index: 1;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-top: 1px solid black;
