--- a/src/components/mainMenu/LangChoice.module.scss
+++ b/src/components/mainMenu/LangChoice.module.scss
@@ -1,13 +1,75 @@
 .lang{
+  font-size: clamp(0.9rem,1vw,1.5rem);
+  padding: 0.5rem;
+  background-color: inherit;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: clamp(0.9rem,1vw,1.5rem);
+  gap: 0.5rem;
 }
 
-/* .menus {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    list-style: none;
-  } */
+.menu{
+  display: inline-block; 
+  position: relative; 
+}
+
+.menu-button{
+  font-size: clamp(0.9rem,1vw,1.5rem);
+  padding: 0.5rem;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-button-active{
+  font-size: clamp(0.9rem,1vw,1.5rem);
+  padding: 0.5rem;
+  border: none;
+  background-color: rgb(221, 221, 221);
+  cursor: pointer;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  font-weight: bold;
+}
+
+.menu-items{
+  position: absolute; 
+  right: 0; 
+  background-color: rgb(221, 221, 221);
+  transform-origin: top left; 
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
+  z-index: 1;
+}
+
+.menu-item{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+
+.menu-item div{
+  justify-content: start;
+  width: 100%;
+  display: flex;
+  flex-grow: 1;
+  text-decoration: none;
+  color: black;
+  padding: 0.5rem 0.75rem;
+}
+
+.menu-item-link-active{
+  background-color: white;
+  font-weight: bold;
+}
+.menu-item-link-active:hover,
+.menu-item-link-active:active
+{
+  background-color: white;
+  font-weight: bold;
+}
