Responzivne Main-menu Pridané globálne farby do App.scss Upravené Main-menu podľa Figmy Pridaný scroll-bar na mobilnú verziu pre TabWindow

--- a/src/components/mainMenu/UserBar.module.scss
+++ b/src/components/mainMenu/UserBar.module.scss
@@ -8,3 +8,10 @@
     justify-content: center;
     gap: 0.5rem;
 }
+
+@media screen and (max-width: 1000px) {
+    .user-bar{
+      width: 100vw;
+      justify-content: flex-start;
+    }
+}
