--- a/src/components/homepage/HpHeader.module.scss
+++ b/src/components/homepage/HpHeader.module.scss
@@ -1,5 +1,7 @@
 .hp-header{
-    padding: 2vh 20vw;
+    padding: 0 20vw;
+    padding-top: 15vh;
+    padding-bottom: 5vh;
     display: flex;
     gap: 1rem;
     justify-content: center;
@@ -12,9 +14,9 @@
     padding: 1.5rem;
     max-width: 800px;
     max-height: 100px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
-
-.hp-header-title{
+    .hp-header-title{
     font-size: clamp(1rem, 1.5vw, 2rem); 
     max-width: 600px;
 }
@@ -28,7 +30,17 @@
 
 @media only screen and (min-width: 1100px) {
     .hp-header{
-        padding: 2vh 30vw;
+        padding: 0 30vw;
+        padding-top: 15vh;
+        padding-bottom: 5vh;
+    }
+  }
+
+  @media only screen and (max-width: 800px) {
+    .hp-header{
+        padding: 0 1rem;
+        padding-top: 15vh;
+        padding-bottom: 5vh;
     }
   }
 
