--- a/src/components/mainMenu/LangChoice.module.scss
+++ b/src/components/mainMenu/LangChoice.module.scss
@@ -1,6 +1,7 @@
+@import '../../App.scss';
+
 .lang{
   font-size: clamp(0.9rem,1vw,1.5rem);
-  padding: 0.5rem;
   background-color: inherit;
   cursor: pointer;
   display: flex;
@@ -12,64 +13,84 @@
 .menu{
   display: inline-block; 
   position: relative; 
+  text-align: left; 
 }
 
 .menu-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-size: clamp(0.9rem,1vw,1.5rem);
+  color: $main-menu;
   padding: 0.5rem;
   border: none;
   background-color: inherit;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .menu-button-active{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-size: clamp(0.9rem,1vw,1.5rem);
+  color: $main-menu-active;
   padding: 0.5rem;
   border: none;
-  background-color: rgb(221, 221, 221);
   cursor: pointer;
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   font-weight: bold;
+
 }
 
 .menu-items{
   position: absolute; 
-  right: 0; 
-  background-color: rgb(221, 221, 221);
+  left: 0; 
+  background-color: rgb(255, 255, 255);
   transform-origin: top left; 
+  width: 15rem; 
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
   z-index: 1;
+
 }
 
 .menu-item{
   display: flex;
   align-items: center;
+  justify-content: start;
   text-decoration: none;
-  color: black;
 }
 
 .menu-item div{
-  justify-content: start;
-  width: 100%;
   display: flex;
   flex-grow: 1;
   text-decoration: none;
-  color: black;
+  color: $main-menu-active;
   padding: 0.5rem 0.75rem;
 }
 
 .menu-item-link-active{
-  background-color: white;
   font-weight: bold;
 }
 .menu-item-link-active:hover,
 .menu-item-link-active:active
 {
-  background-color: white;
+  background-color: $main-menu-hover;
   font-weight: bold;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .menu-button{
+    width: 100vw;
+    justify-content: flex-start;
+  }
+  .menu-items{
+      position: relative;
+      width: 100vw;
+  }
+
+  .menu-button-active{
+    border-bottom-left-radius: 0;
+  }
 }
