--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -1,18 +1,25 @@
+@import '../../App.scss';
+
 .main-menu {
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-    color: #212529;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    padding: 10px 20px;
-  }
+  padding: 0 20px;
+  color: $main-menu;
+  height: 10vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  gap: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0 5px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
 
   .logo {
     text-decoration: none;
     font-size: clamp(2rem,4vw,5rem);
     color: inherit;
-    margin-right: 20px;
   }
   .logo img{
     max-height: clamp(3rem,4vw,5rem);
@@ -20,8 +27,10 @@
 
   .nav-right{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
   }
 
   .lang-choice{
@@ -34,4 +43,53 @@
     flex-wrap: wrap;
     list-style: none;
     gap: 1rem;
+  }
+
+  .hamburger {
+    position: absolute !important;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    display: none !important;
+  }
+
+  @media screen and (max-width: 1000px) {
+    .main-menu{
+      flex-direction: column;
+      gap: 0;
+      width: 100%;
+      padding: 0;
+    }
+
+    .logo img{
+      position: absolute !important;
+      top: 50%;
+      left: 25px;
+      transform: translateY(-50%);
+      max-height: clamp(4rem,4vw,5rem);
+    }
+
+    .nav-right{
+      flex-direction: column;
+      width: 100%;
+      background-color: inherit;
+      gap: 0;
+      border-bottom: 5px solid rgb(212, 223, 65);
+      padding-bottom: 0.5rem;
+    }
+
+    .menus{
+      padding-top: 10vh;
+      flex-direction: column;
+      gap: 0;
+      width: 100%;
+      background-color: inherit;
+    }
+
+    
+
+    .hamburger {
+      display: block !important;
+      top: 50%;
+    }
   }
