--- a/src/components/mainMenu/MenuItem.module.scss
+++ b/src/components/mainMenu/MenuItem.module.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .menu{
     display: inline-block; 
     position: relative; 
@@ -5,24 +7,28 @@
 }
 
 .menu-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     font-size: clamp(0.9rem,1vw,1.5rem);
+    color: $main-menu;
     padding: 0.5rem;
     border: none;
     background-color: inherit;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .menu-button-active{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     font-size: clamp(0.9rem,1vw,1.5rem);
+    color: $main-menu-active;
     padding: 0.5rem;
     border: none;
-    background-color: rgb(221, 221, 221);
     cursor: pointer;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
     font-weight: bold;
 
 }
@@ -30,13 +36,11 @@
 .menu-items{
     position: absolute; 
     left: 0; 
-    background-color: rgb(221, 221, 221);
+    background-color: rgb(255, 255, 255);
     transform-origin: top left; 
     width: 15rem; 
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
     z-index: 1;
-    border-radius: 1rem;
-    border-top-left-radius: 0;
 
 }
 
@@ -45,29 +49,34 @@
     align-items: center;
     justify-content: start;
     text-decoration: none;
-    color: black;
 }
 
 .menu-item div{
     display: flex;
     flex-grow: 1;
     text-decoration: none;
-    color: black;
+    color: $main-menu-active;
     padding: 0.5rem 0.75rem;
 }
 
 .menu-item-link-active{
-    background-color: white;
     font-weight: bold;
-
-
-    /* background-color: rgb(228, 228, 228); */ 
 }
 .menu-item-link-active:hover,
 .menu-item-link-active:active
 {
-    background-color: white;
+    background-color: $main-menu-hover;
     font-weight: bold;
+}
 
-    /* background-color: rgb(228, 228, 228); */ 
+@media screen and (max-width: 1000px) {
+    .menu-button{
+      width: 100vw;
+      justify-content: flex-start;
+    }
+    .menu-items{
+        position: relative;
+        width: 100vw;
+        border-radius: 0;
+    }
 }
