--- a/src/components/tabWindow/TabNav.module.scss
+++ b/src/components/tabWindow/TabNav.module.scss
@@ -2,49 +2,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 5rem;
     gap:  1rem;
     padding-bottom: 2rem;
+    flex-shrink: 1 0 auto;
+    flex-shrink: 0;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
 }
 
-.arrow{
-    color: #f56520;
-    padding: 0;
-    margin-top: -5px;
-    font-size: 1.5rem;
-    
-}
+@media (max-width:800px) {
+  .tab-list {
+      justify-content: flex-start;
+      padding-left: 1rem;
+    }
+  }
 
-.button{
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    cursor: pointer;
-    background-color: #ffffff; 
-    color: #000000; 
-    text-transform: uppercase;
-    border: none;
-    padding: 1rem;
-    text-decoration: underline;
-}
-
-.button-selected{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    cursor: pointer;
-    padding: 1rem;
-    padding-bottom: 0;
-    text-transform: uppercase;
-    color: #ffffff; 
-    border: none;
-    text-decoration: underline;
-    color: #f56520;
-    font-weight: bold;
-}
