Opravený TabNav + globálna farba.

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,3 +17,6 @@
 $main-menu:#000000;
 $main-menu-active:#6B4732;
 $main-menu-hover:#dadada;
+
+$tab-text-color: #11242E;
+$tab-text-color-active: #F56520;
