--- a/src/components/tabWindow/TabBtn.module.scss
+++ b/src/components/tabWindow/TabBtn.module.scss
@@ -1,8 +1,9 @@
+@import '../../App.scss';
+
+
 .arrow{
-    color: #f56520;
-    padding: 0;
-    margin-top: -5px;
-    font-size: 1.5rem;
+    color: $tab-text-color-active;
+    font-size: 3rem !important;
 }
 
 .button{
@@ -10,12 +11,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     flex-shrink: 0;
 
     cursor: pointer;
     background-color: #ffffff; 
-    color: #000000; 
+    color: $tab-text-color;
     text-transform: uppercase;
     border: none;
     padding: 1rem;
@@ -26,18 +26,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     flex-shrink: 0;
     
     font-size: clamp(0.9rem,1vw,1.5rem);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     cursor: pointer;
-    padding: 1rem;
-    padding-bottom: 0;
+    padding: 0 1rem;
+    padding-top: 1.5rem;
+    margin-bottom: -25px;
+    line-height: 0;
     text-transform: uppercase;
-    color: #ffffff; 
     border: none;
     text-decoration: underline;
-    color: #f56520;
+    color: $tab-text-color-active;
     font-weight: bold;
 }
