Upravený Big, Small article podľa figmy Pridané globálne farby do BIG, Small article

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,3 +20,8 @@ $main-menu-hover:#dadada;
 
 $tab-text-color: #11242E;
 $tab-text-color-active: #F56520;
+
+$artice-title-color: #6B4732;
+$article-date-category-color: #626A6E;
+
+$footer-text-color: #000000;
