--- a/src/articles/BigArticle.module.scss
+++ b/src/articles/BigArticle.module.scss
@@ -1,3 +1,5 @@
+@import '../App.scss';
+
 .big-article{
     background-color: white;
     display: flex;
@@ -23,13 +25,14 @@
 .title{
     padding: 0.5rem;
     font-size: clamp(0.8rem, 0.9vw, 1.5rem);
-    color: #816453; 
+    color: $artice-title-color; 
     letter-spacing: 0.5px;
     font-weight: 400;
     line-height: 1.6;
 
     a{
         color: inherit;
+        text-decoration: none;
     }
 }
 
@@ -37,5 +40,14 @@
     letter-spacing: 0.3px;
     padding: 0.5rem;
     font-size: clamp(0.8rem, 0.9vw, 1.5rem);
-    color: #798185; 
+    color: $article-date-category-color;
 }
+
+@media (max-width:800px) {
+    .title {
+        font-size: clamp(1rem, 3vw, 1.5rem);
+      }
+      .date-category{
+        font-size: clamp(1rem, 3vw, 1.5rem);
+    }
+    }
