--- a/src/articles/SmallArticle.module.scss
+++ b/src/articles/SmallArticle.module.scss
@@ -1,3 +1,5 @@
+@import '../App.scss';
+
 .small-aricle{
     background-color: white;
     display: grid;
@@ -24,13 +26,14 @@
 .title{
     padding: 0.5rem;
     font-size: clamp(0.9rem, 0.8vw, 1.3rem);
-    color: #816453; 
+    color: $artice-title-color;
     letter-spacing: 0.5px;
     font-weight: 400;
     line-height: 1.6;
 
     a{
         color: inherit;
+        text-decoration: none;
     }
 }
 
@@ -38,5 +41,15 @@
     letter-spacing: 0.3px;
     padding: 0.5rem;
     font-size: clamp(0.7rem, 0.7vw, 1.3rem);
-    color: #798185; 
+    color: $article-date-category-color;
 }
+
+@media (max-width:800px) {
+    .title {
+        padding-top: 2rem;
+        font-size: clamp(1rem, 3vw, 1.5rem);
+      }
+      .date-category{
+        font-size: clamp(1rem, 3vw, 1.5rem);
+    }
+    }
