--- a/src/components/homepage/HpSearch.module.scss
+++ b/src/components/homepage/HpSearch.module.scss
@@ -14,7 +14,7 @@
 
 .combobox-input{
     padding: 0.75rem;
-    font-size: 1.2rem;
+    font-size: clamp(1rem, 3vw, 1.5rem);    
     background-color: #F3F4F6; 
     width: 100%; 
     outline: 0; 
@@ -26,7 +26,7 @@
     position: absolute;
     background-color: white;
     padding: 0.5rem;
-    font-size: 1.2rem;
+    font-size: clamp(1rem, 3vw, 1.5rem);
     z-index: 1;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-top: 1px solid black;
