--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -1,4 +1,4 @@
-@import '../../App.scss';
+@import "../../Colors.scss";
 
 .main-menu {
   padding: 0 20px;
@@ -66,7 +66,7 @@
       top: 50%;
       left: 25px;
       transform: translateY(-50%);
-      max-height: clamp(4rem,4vw,5rem);
+      max-height: clamp(3.3rem,4vw,5rem);
     }
 
     .nav-right{
@@ -74,8 +74,8 @@
       width: 100%;
       background-color: inherit;
       gap: 0;
-      border-bottom: 5px solid rgb(212, 223, 65);
-      padding-bottom: 0.5rem;
+      border-bottom: 3px solid $main-menu-active;
+      padding-bottom: 1.5rem;
     }
 
     .menus{
