--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -1,10 +1,104 @@
+@import "../../../Colors.scss";
+
 .agendy{
+    background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    font-size:  1.5rem;
-    font-weight: bold;
-    height: 20vh;
-    background-color: rgb(230, 222, 222);
+    
+    gap: 1rem;
+    padding: 2vw 10vw;
 }
 
+.agendy-headers{ 
+    display: flex;   
+    gap: 1rem;
+    background-color: rgb(255, 255, 255);
+
+}
+
+.agendy-headers h1{
+    flex-grow: 1;  
+    padding: 0.3rem;
+    font-size: clamp(1rem, 1vw, 1.5rem);
+    font-weight: 450;
+}
+
+.agendy-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    padding: 1rem;
+
+}
+
+.agendy-left{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;   
+}
+
+.odkazy{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: white;
+    flex-grow: 1;
+}
+
+.odkazy a{
+    color: $tab-text-color-active;
+    padding: 0.5rem;
+}
+
+.agendy-middle{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.agendy-middle-articles{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex-grow: 1;
+}
+
+.agendy-right{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.agendy-right-articles{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media (max-width:800px) {
+
+    .agendy{
+        padding: 0;
+    }
+
+    .agendy-content{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .agendy-headers h1 {
+        padding: 0.3rem;
+        font-size: clamp(1.5rem, 1vw, 2rem);
+        background-color: white;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
