Pridanná postránka stavZP

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -12,4 +12,6 @@ $article-date-category-color: #626A6E;
 $footer-text-color: #000000;
 
 $agendy-stvorec-farba: red;
+$stav-zp-stvorec-farba: red;
 $agendy-subtitle-farba: #6B4732;
+$stav-zp-subtitle-farba: #6B4732;
