--- a/src/components/articles/SmallArticle.module.scss
+++ b/src/components/articles/SmallArticle.module.scss
@@ -4,7 +4,7 @@
     background-color: white;
     display: grid;
     grid-template-columns: 40% 60%;
-    min-height: 150px;
+    height: 33%;
 }
 
 .small-aricle-img{
