Dokončené podstránky v tab-window minimalizícia css

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -15,3 +15,9 @@ $agendy-stvorec-farba: red;
 $stav-zp-stvorec-farba: red;
 $agendy-subtitle-farba: #6B4732;
 $stav-zp-subtitle-farba: #6B4732;
+$mapy-data-title-farba: #6B4732;
+$kalendar-title-farba: #6B4732;
+
+$gradient-left:#83CB6D;
+$gradient-middle:#E4F0EC;
+$gradient-right:#87D4EE;
