--- a/src/components/homepage/HpSearch.module.scss
+++ b/src/components/homepage/HpSearch.module.scss
@@ -1,5 +1,7 @@
 .search-box{
     display: flex;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .search-icon {
@@ -20,6 +22,7 @@
     outline: 0; 
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
 }
 
 .combobox-options{
@@ -28,7 +31,7 @@
     padding: 0.5rem;
     font-size: clamp(1rem, 3vw, 1.5rem);
     z-index: 1;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-top: 1px solid black;
 }
 
