--- a/src/components/articles/AgendyVyberObsahu.module.scss
+++ b/src/components/articles/AgendyVyberObsahu.module.scss
@@ -3,7 +3,12 @@
 .agendy-vyber-obsahu{
     background-color: rgb(255, 255, 255);
     padding: 0.5rem;
-    height: 33%;
+    display: flex;
+    gap: 0.75rem;
+    flex-direction: column;
+    flex-grow: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .agendy-title{
