--- a/src/components/articles/BigArticle.module.scss
+++ b/src/components/articles/BigArticle.module.scss
@@ -5,21 +5,27 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    min-height: clamp(350px, 20vh, 400px);
+    flex-grow: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .big-article img {
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: auto;
+    object-fit: cover;
+    overflow: hidden;
     aspect-ratio: 16 / 9;
 }
 
 .big-article-info{
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
     justify-content: space-between;
+    gap: 0.5rem;
 }
 
 .title{
@@ -29,11 +35,11 @@
     letter-spacing: 0.5px;
     font-weight: 400;
     line-height: 1.6;
+}
 
-    a{
-        color: inherit;
-        text-decoration: none;
-    }
+.title a{
+    color: inherit;
+    text-decoration: none;
 }
 
 .date-category{
