--- a/src/components/articles/SmallArticle.module.scss
+++ b/src/components/articles/SmallArticle.module.scss
@@ -4,23 +4,29 @@
     background-color: white;
     display: grid;
     grid-template-columns: 40% 60%;
-    height: 33%;
+    flex-grow: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .small-aricle-img{
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     width: 100%;
-    aspect-ratio: 1 / 1;
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
+    aspect-ratio: 1 / 1;
 }
 
 .small-article-info{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-grow: 1;
+    gap: 1rem;
+    background-color: white;
 }
 
 .title{
@@ -30,11 +36,11 @@
     letter-spacing: 0.5px;
     font-weight: 400;
     line-height: 1.6;
+}
 
-    a{
-        color: inherit;
-        text-decoration: none;
-    }
+.title a{
+    color: inherit;
+    text-decoration: none;
 }
 
 .date-category{
