--- a/src/components/articles/StavZpArticle.module.scss
+++ b/src/components/articles/StavZpArticle.module.scss
@@ -3,13 +3,17 @@
 .stav-zp-vyber-obsahu{
     background-color: rgb(255, 255, 255);
     padding: 0.5rem;
-    height: 25%;
+    flex-grow: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .stav-zp-title{
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
+    text-transform: uppercase;
     font-size: clamp(0.8rem, 0.9vw, 1.5rem);
 }
 
