--- a/src/components/articles/StavZpGrafArticle.module.scss
+++ b/src/components/articles/StavZpGrafArticle.module.scss
@@ -3,7 +3,9 @@
 .stav-zp-graf{
     background-color: rgb(255, 255, 255);
     padding: 0.5rem;
-    height: 50%;
+    flex-grow: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .stav-zp-title{
