--- a/src/components/homepage/HpHeader.module.scss
+++ b/src/components/homepage/HpHeader.module.scss
@@ -1,3 +1,5 @@
+@import "../../Colors.scss";
+
 .hp-header{
     padding: 0 20vw;
     padding-top: 15vh;
@@ -6,27 +8,33 @@
     gap: 1rem;
     justify-content: center;
     flex-direction: column;
+
 }
 
 .bg-image{
-    background-image: url("https://media.istockphoto.com/vectors/abstract-creative-background-vector-id1222376322?k=20&m=1222376322&s=612x612&w=0&h=04zOjE7m93H7XMn3wKXBEyWkUkbqVw2GcWfd-he-_aw=");
-    background-size: cover;
+    /* background-image: url("https://media.istockphoto.com/vectors/abstract-creative-background-vector-id1222376322?k=20&m=1222376322&s=612x612&w=0&h=04zOjE7m93H7XMn3wKXBEyWkUkbqVw2GcWfd-he-_aw=");
+    background-size: cover; */
+    background-image: linear-gradient(to bottom, $gradient-left, $gradient-right);
+
     padding: 1.5rem;
     max-width: 800px;
     max-height: 100px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    border-radius: 1rem;
 }
 
 .hp-header-title{
     font-size: clamp(1rem, 1.5vw, 2rem); 
-    max-width: 600px;
+    text-align: center;
+    padding-bottom: 1.5rem;
 }
 
 .preskumat{
+    padding-top: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.75rem;
+    font-size: 0.85rem;
 }
 
 @media only screen and (min-width: 1100px) {
