--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -1,27 +1,19 @@
 @import "../../../Colors.scss";
 
 .agendy{
-    background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
+    /* background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    gap: 1rem;
+    background-image: linear-gradient(to right,$gradient-left, $gradient-middle, $gradient-right);
     padding: 2vw 10vw;
-}
-
-.agendy-headers{ 
-    display: flex;   
-    gap: 1rem;
-    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
-
 .agendy-headers h1{
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     flex-grow: 1;  
     padding: 0.3rem;
     font-size: clamp(1rem, 1vw, 1.5rem);
@@ -33,13 +25,13 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
     padding: 1rem;
-
 }
 
-.agendy-left{
+.agendy-col{
     display: flex;
     flex-direction: column;
-    gap: 1rem;   
+    gap: 1rem; 
+
 }
 
 .odkazy{
@@ -47,36 +39,17 @@
     flex-direction: column;
     align-items: flex-start;
     background-color: white;
+    gap: 1rem;
+    padding: 0.5rem 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
     flex-grow: 1;
 }
 
-.odkazy a{
-    color: $tab-text-color-active;
-    padding: 0.5rem;
-}
-
-.agendy-middle{
+.agendy-article{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-}
-
-.agendy-middle-articles{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     flex-grow: 1;
-}
-
-.agendy-right{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.agendy-right-articles{
-    display: flex;
-    flex-direction: column;
     gap: 1rem;
 }
 
