--- a/src/components/tabWindow/podstarnky/Temy.module.scss
+++ b/src/components/tabWindow/podstarnky/Temy.module.scss
@@ -1,24 +1,14 @@
 @import "../../../Colors.scss";
 
 .temy{
-    background-image: url("https://cdn.pixabay.com/photo/2015/07/13/17/59/dandelion-843587_960_720.jpg");
+    /* background-image: url("https://cdn.pixabay.com/photo/2015/07/13/17/59/dandelion-843587_960_720.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    gap: 1rem;
+    background-image: linear-gradient(to right bottom, $gradient-left, $gradient-middle, $gradient-right);
     padding: 2vw 10vw;
-}
-
-.temy-headers{ 
-    display: flex;   
-    gap: 1rem;
-    background-color: rgb(255, 255, 255);
-
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .temy-headers h1{
@@ -26,6 +16,8 @@
     padding: 0.3rem;
     font-size: clamp(1rem, 1vw, 1.5rem);
     font-weight: 450;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .temy-content{
@@ -33,10 +25,9 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
     padding: 1rem;
-
 }
 
-.temy-left{
+.temy-col{
     display: flex;
     flex-direction: column;
     gap: 1rem;   
@@ -47,37 +38,18 @@
     flex-direction: column;
     align-items: flex-start;
     background-color: white;
+    gap: 1rem;
+    padding: 0.5rem 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
     flex-grow: 1;
 }
 
-.odkazy a{
-    color: $tab-text-color-active;
-    padding: 0.5rem;
-}
-
-.temy-middle{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.temy-middle-articles{
+.temy-article{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     flex-grow: 1;
-}
-
-.temy-right{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.temy-right-articles{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
 }
 
 @media (max-width:800px) {
