Upravené na mobilnú verziu podľa figmy. Zmenené fonty. Minimalizácia kódu.

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,23 +1,25 @@
 /* farby */
-$main-menu:#000000;
-$main-menu-active:#6B4732;
-$main-menu-hover:#dadada;
+$main-menu: #000000;
+$main-menu-active: #6b4732;
+$main-menu-hover: #dadada;
 
-$tab-text-color: #11242E;
-$tab-text-color-active: #F56520;
+$tab-text-color: #11242e;
+$tab-text-color-active: #f56520;
 
-$artice-title-color: #6B4732;
-$article-date-category-color: #626A6E;
+$artice-title-color: #6b4732;
+$article-date-category-color: #626a6e;
 
 $footer-text-color: #000000;
 
 $agendy-stvorec-farba: red;
 $stav-zp-stvorec-farba: red;
-$agendy-subtitle-farba: #6B4732;
-$stav-zp-subtitle-farba: #6B4732;
-$mapy-data-title-farba: #6B4732;
-$kalendar-title-farba: #6B4732;
+$agendy-subtitle-farba: #6b4732;
+$stav-zp-subtitle-farba: #6b4732;
+$mapy-data-title-farba: #6b4732;
+$kalendar-title-farba: #6b4732;
 
-$gradient-left:#83CB6D;
-$gradient-middle:#E4F0EC;
-$gradient-right:#87D4EE;
+$gradient-left: #83cb6d;
+$gradient-middle: #e4f0ec;
+$gradient-right: #87d4ee;
+
+$show-mobile: 1000px;
