--- a/src/components/articles/AgendyDoPozornosti.module.scss
+++ b/src/components/articles/AgendyDoPozornosti.module.scss
@@ -1,41 +1,36 @@
 @import "../../Colors.scss";
 
-.agendy-do-pozornosti{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(255, 255, 255);
-    flex-grow: 1;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+.agendy-do-pozornosti {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  flex-grow: 1;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .agendy-do-pozornosti img {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 16 / 9;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16 / 9;
 }
 
-
-.agendy-nadpis{
-    padding: 0.5rem;
-    font-size: clamp(0.8rem, 0.9vw, 1.5rem);
-    color: $artice-title-color; 
-    letter-spacing: 0.5px;
-    font-weight: 400;
-    line-height: 1.6;
-    text-transform: uppercase;
+.agendy-nadpis {
+  padding: 1.75rem 0.75rem;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  color: $artice-title-color;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  text-transform: uppercase;
 }
 
-@media (max-width:800px) {
-    .agendy-nadpis {
-        padding: 0.3rem;
-        font-size: clamp(1.2rem, 1vw, 2rem);
-        background-color: white;
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-    }
-    }
+@media (max-width: $show-mobile) {
+  .agendy-nadpis {
+    padding: 0.3rem;
+    font-size: 16px;
+  }
+}
