--- a/src/components/articles/DokumentyDoPozornosti.module.scss
+++ b/src/components/articles/DokumentyDoPozornosti.module.scss
@@ -1,28 +1,32 @@
 @import "../../Colors.scss";
 
-.dokumenty-do-pozornosti{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    background-color: white;
-    flex-grow: 1;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+.dokumenty-do-pozornosti {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: white;
+  flex-grow: 1;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.dokumenty-do-pozornosti-title{
-    text-align: center;
-    font-size: clamp(1rem, 3vw, 1.5rem);
-    font-weight: 400;
-    color: $artice-title-color;
+.dokumenty-do-pozornosti-title {
+  color: $artice-title-color;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
-.dokumenty-do-pozornosti-content{
-    font-size: clamp(0.8rem, 0.9vw, 1.5rem);
-    letter-spacing: 0.5px;
-    font-weight: 400;
-    line-height: 1.6;
+.dokumenty-do-pozornosti-content {
+  font-size: clamp(0.8rem, 0.9vw, 1.5rem);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
 }
