--- a/src/components/articles/SmallArticle.module.scss
+++ b/src/components/articles/SmallArticle.module.scss
@@ -1,61 +1,51 @@
 @import "../../Colors.scss";
 
-.small-aricle{
-    background-color: white;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    flex-grow: 1;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+.small-aricle {
+  background-color: white;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  flex-grow: 1;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.small-aricle-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: hidden;
-    aspect-ratio: 1 / 1;
+.small-aricle-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
 }
 
-.small-article-info{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 1;
-    gap: 1rem;
-    background-color: white;
+.small-article-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  background-color: white;
 }
 
-.title{
-    padding: 0.5rem;
-    font-size: clamp(0.9rem, 0.8vw, 1.3rem);
-    color: $artice-title-color;
-    letter-spacing: 0.5px;
-    font-weight: 400;
-    line-height: 1.6;
+.title {
+  padding: 0.5rem;
+  color: $artice-title-color;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
 }
 
-.title a{
-    color: inherit;
-    text-decoration: none;
+.title a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.date-category{
-    letter-spacing: 0.3px;
-    padding: 0.5rem;
-    font-size: clamp(0.7rem, 0.7vw, 1.3rem);
-    color: $article-date-category-color;
+.date-category {
+  letter-spacing: 0.3px;
+  padding: 0.5rem;
+  font-size: 14px;
+  color: $article-date-category-color;
 }
 
-@media (max-width:800px) {
-    .title {
-        padding-top: 2rem;
-        font-size: clamp(1rem, 3vw, 1.5rem);
-      }
-      .date-category{
-        font-size: clamp(1rem, 3vw, 1.5rem);
-    }
-    }
+@media (max-width: $show-mobile) {
+}
