--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,52 +1,61 @@
 @import "../../Colors.scss";
 
-.footer{
-    padding-top: 2vh !important;
-    height: 10vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;    
-    padding: 0 2.5vw;
-    color: $footer-text-color;
-
-    a{
-        text-decoration: underline;
-        color: inherit;
-    }
+.footer {
+  padding-top: 2vh !important;
+  height: 10vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 2.5vw;
+  color: $footer-text-color;
+}
+.footer a {
+  text-decoration: underline;
+  color: $footer-text-color;
 }
 
-.footer-left{
-    display: grid;
-    gap: 1rem;
-    grid-template-rows: 70% 30%;
-
+.footer-left {
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: 70% 30%;
 }
 
-.footer-left-links{
-    padding: 0.5rem 0;
-    display: flex;
-    flex-wrap: wrap; 
-    column-gap: 1rem;
+.footer-left-links {
+  padding: 0.5rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 1rem;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-.footer-right{
-    display: grid;
-    gap: 1rem;
-    grid-template-rows: 70% 30%;
+.footer-right {
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: 70% 30%;
 }
 
-.footer-right-logo{
-        display: flex;
-        padding: 0.5rem 0;
-        gap: 1rem;
-         img{
-            max-width: 50px;
-            object-fit: cover;
-        }
+.footer-right-logo {
+  display: flex;
+  padding: 0.5rem 0;
+  gap: 0.5rem;
+}
+
+.footer-right-logo img {
+  max-width: 50px;
+  object-fit: cover;
 }
 
 @media only screen and (min-width: 1200px) {
-    .footer{ 
-        padding: 2vw 20vw;
-        margin-bottom: 2rem;
-    }
+  .footer {
+    padding: 2vw 20vw;
+    margin-bottom: 2rem;
   }
+}
+
+@media (max-width: $show-mobile) {
+  .footer {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
