--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -1,95 +1,107 @@
 @import "../../Colors.scss";
 
 .main-menu {
-  padding: 0 20px;
   color: $main-menu;
-  height: 10vh;
+  height: 60px;
   display: flex;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  gap: 0.5rem;
+  gap: 0.3rem;
   justify-content: space-between;
   align-items: center;
   background-color: white;
   box-shadow: 0 5px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
-  .logo {
-    text-decoration: none;
-    font-size: clamp(2rem,4vw,5rem);
-    color: inherit;
-  }
-  .logo img{
-    max-height: clamp(3rem,4vw,5rem);
+.logo {
+  text-decoration: none;
+  font-size: clamp(2rem, 4vw, 5rem);
+  color: inherit;
+}
+.logo img {
+  max-height: clamp(4rem, 4vw, 5rem);
+}
+
+.nav-right {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3rem;
+}
+
+.lang-choice {
+  color: #868aa0;
+}
+
+.menus {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 0.3rem;
+}
+
+.hamburger {
+  position: absolute !important;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none !important;
+}
+
+.menu-search {
+  display: none;
+}
+
+@media screen and (max-width: $show-mobile) {
+  .main-menu {
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+    padding: 0;
   }
 
-  .nav-right{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
-
-  .lang-choice{
-    color: #868aa0;
-  }
-
-  .menus {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    list-style: none;
-    gap: 1rem;
-  }
-
-  .hamburger {
+  .logo img {
     position: absolute !important;
     top: 50%;
-    right: 25px;
+    left: 0;
+    top: 25px;
     transform: translateY(-50%);
-    display: none !important;
+    max-height: clamp(3.3rem, 4vw, 5rem);
   }
 
-  @media screen and (max-width: 1000px) {
-    .main-menu{
-      flex-direction: column;
-      gap: 0;
-      width: 100%;
-      padding: 0;
-    }
-
-    .logo img{
-      position: absolute !important;
-      top: 50%;
-      left: 25px;
-      transform: translateY(-50%);
-      max-height: clamp(3.3rem,4vw,5rem);
-    }
-
-    .nav-right{
-      flex-direction: column;
+  .nav-right {
+    /* flex-direction: column;
       width: 100%;
       background-color: inherit;
       gap: 0;
       border-bottom: 3px solid $main-menu-active;
-      padding-bottom: 1.5rem;
-    }
+      padding-bottom: 1.5rem; */
 
-    .menus{
-      padding-top: 10vh;
-      flex-direction: column;
-      gap: 0;
-      width: 100%;
-      background-color: inherit;
-    }
-
-    
-
-    .hamburger {
-      display: block !important;
-      top: 50%;
-    }
+    display: none;
   }
+
+  .menus {
+    padding-top: 60px;
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+    background-color: inherit;
+    border-bottom: 4px solid green;
+  }
+
+  .menu-search {
+    display: block;
+    padding-top: 0.5rem;
+    width: 100%;
+  }
+
+  .hamburger {
+    display: block !important;
+    top: 35px;
+    right: 10px;
+  }
+}
