--- a/src/components/mainMenu/MenuItem.module.scss
+++ b/src/components/mainMenu/MenuItem.module.scss
@@ -1,82 +1,83 @@
 @import "../../Colors.scss";
 
-.menu{
-    display: inline-block; 
-    position: relative; 
-    text-align: left; 
+.menu {
+  display: inline-block;
+  position: relative;
+  text-align: left;
 }
 
-.menu-button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    color: $main-menu;
-    padding: 0.5rem;
-    border: none;
-    background-color: inherit;
-    cursor: pointer;
+  font-size: 16px;
+  color: $main-menu;
+  padding: 0.5rem;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
 }
 
-.menu-button-active{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu-button-active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    color: $main-menu-active;
-    padding: 0.5rem;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-
+  font-size: clamp(0.9rem, 1vw, 1.5rem);
+  color: $main-menu-active;
+  padding: 0.5rem;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-.menu-items{
-    position: absolute; 
-    left: 0; 
-    background-color: rgb(255, 255, 255);
-    transform-origin: top left; 
-    width: 15rem; 
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
-    z-index: 1;
-
+.menu-items {
+  position: absolute;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  transform-origin: top left;
+  width: 15rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  z-index: 1;
 }
 
-.menu-item{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    text-decoration: none;
+.menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  text-decoration: none;
 }
 
-.menu-item div{
-    display: flex;
-    flex-grow: 1;
-    text-decoration: none;
-    color: $main-menu-active;
-    padding: 0.5rem 0.75rem;
+.menu-item div {
+  display: flex;
+  flex-grow: 1;
+  text-decoration: none;
+  color: $main-menu-active;
+  padding: 0.5rem 0.75rem;
 }
 
-.menu-item-link-active{
-    font-weight: bold;
+.menu-item-link-active {
+  font-weight: bold;
 }
 .menu-item-link-active:hover,
-.menu-item-link-active:active
-{
-    background-color: $main-menu-hover;
-    font-weight: bold;
+.menu-item-link-active:active {
+  background-color: $main-menu-hover;
+  font-weight: bold;
 }
 
-@media screen and (max-width: 1000px) {
-    .menu-button{
-      width: 100vw;
-      justify-content: flex-start;
-    }
-    .menu-items{
-        position: relative;
-        width: 100vw;
-        border-radius: 0;
-    }
+@media (max-width: $show-mobile) {
+  .menu-button,
+  .menu-button-active {
+    width: 100vw;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+  }
+
+  .menu-items {
+    position: relative;
+    width: 100vw;
+    border-radius: 0;
+  }
 }
