--- a/src/components/tabWindow/TabBtn.module.scss
+++ b/src/components/tabWindow/TabBtn.module.scss
@@ -1,44 +1,61 @@
 @import "../../Colors.scss";
 
-
-.arrow{
-    color: $tab-text-color-active;
-    font-size: 3rem !important;
+.arrow {
+  color: $tab-text-color-active;
+  font-size: 3rem !important;
 }
 
-.button{
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-shrink: 0;
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    cursor: pointer;
-    background-color: #ffffff; 
-    color: $tab-text-color;
-    text-transform: uppercase;
-    border: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+
+  cursor: pointer;
+  border: none;
+  color: $tab-text-color;
+  padding: 1rem;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.button-selected {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 0 1rem;
+  padding-top: 1.5rem;
+  margin-bottom: -25px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 0;
+
+  text-decoration: underline;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  border-radius: 1rem;
+  color: $tab-text-color-active;
+}
+
+@media (max-width: $show-mobile) {
+  .arrow {
+    display: none !important;
+  }
+
+  .button {
+    padding: 0.5rem;
+    width: 100%;
+  }
+  .button-selected {
+    width: 100%;
     padding: 1rem;
-    text-decoration: underline;
-}
-
-.button-selected{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-shrink: 0;
-
-    padding: 0 1rem;
-    padding-top: 1.5rem;
-    margin-bottom: -25px;
-
-    text-decoration: underline;
-    font-size: clamp(0.9rem,1vw,1.5rem);
-    font-weight: bold;
-    line-height: 0;
-    text-transform: uppercase;
-    cursor: pointer;
-    border: none;
-    border-radius: 1rem;
-    color: $tab-text-color-active;
+    margin: 0;
+    border-radius: 0;
+  }
 }
