--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -1,77 +1,81 @@
 @import "../../../Colors.scss";
 
-.agendy{
-    /* background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
+.agendy {
+  /* background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
 
-    background-image: linear-gradient(to right,$gradient-left, $gradient-middle, $gradient-right);
-    padding: 2vw 10vw;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+  background-image: linear-gradient(
+    to right,
+    $gradient-left,
+    $gradient-middle,
+    $gradient-right
+  );
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.agendy-headers h1{
-    background-color: rgb(255, 255, 255);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    flex-grow: 1;  
-    padding: 0.3rem;
-    font-size: clamp(1rem, 1vw, 1.5rem);
-    font-weight: 450;
-}
-
-.agendy-content{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-    padding: 1rem;
+.agendy-headers h2 {
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  flex-grow: 1;
+  padding: 0.3rem;
+  font-size: clamp(1rem, 1vw, 1.5rem);
+  font-weight: 450;
 }
 
-.agendy-col{
+.agendy-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.agendy-col {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.odkazy {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: white;
+}
+.odkazy a {
+  flex-grow: 1;
+}
+
+.agendy-article {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 1rem;
+}
+
+@media (max-width: $show-mobile) {
+  .agendy {
+    padding: 0;
+  }
+
+  .agendy-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem; 
-
-}
-
-.odkazy{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: white;
     gap: 1rem;
-    padding: 0.5rem 1rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white;
-    flex-grow: 1;
-}
+  }
 
-.agendy-article{
+  .agendy-headers h2 {
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 25px;
     display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    gap: 1rem;
-}
-
-@media (max-width:800px) {
-
-    .agendy{
-        padding: 0;
-    }
-
-    .agendy-content{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .agendy-headers h1 {
-        padding: 0.3rem;
-        font-size: clamp(1.5rem, 1vw, 2rem);
-        background-color: white;
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    align-items: center;
+  }
+  .odkazy {
+    gap: 10px;
+  }
 }
