--- a/src/components/tabWindow/podstarnky/StavZP.module.scss
+++ b/src/components/tabWindow/podstarnky/StavZP.module.scss
@@ -1,78 +1,85 @@
 @import "../../../Colors.scss";
 
-.stav-zp{
-    /* background-image: url("https://cdn.pixabay.com/photo/2016/12/14/04/13/wave-1905610__340.jpg");
+.stav-zp {
+  /* background-image: url("https://cdn.pixabay.com/photo/2016/12/14/04/13/wave-1905610__340.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
 
-    background-image: linear-gradient(to bottom, $gradient-left, $gradient-middle, $gradient-right);
-    padding: 2vw 10vw;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-image: linear-gradient(
+    to bottom,
+    $gradient-left,
+    $gradient-middle,
+    $gradient-right
+  );
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.stav-zp-headers h1{
-    flex-grow: 1;  
-    padding: 0.3rem;
-    font-size: clamp(1rem, 1vw, 1.5rem);
-    font-weight: 450;
-    background-color: rgb(255, 255, 255);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.stav-zp-headers h2 {
+  flex-grow: 1;
+  padding: 0.3rem;
+  font-size: clamp(1rem, 1vw, 1.5rem);
+  font-weight: 450;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.stav-zp-content{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-    padding: 1rem;
+.stav-zp-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.stav-zp-col{
+.stav-zp-col {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex-grow: 1;
+}
+
+.odkazy {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: white;
+  flex-grow: 1;
+}
+
+.odkazy a {
+  flex-grow: 1;
+}
+
+.stav-zp-article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex-grow: 1;
+}
+
+@media (max-width: $show-mobile) {
+  .stav-zp {
+    padding: 0;
+  }
+
+  .stav-zp-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;  
-    flex-grow: 1; 
-}
-
-.odkazy{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: white;
     gap: 1rem;
-    padding: 0.5rem 1rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white;
-    flex-grow: 1;
-}
+  }
 
-
-.stav-zp-article{
+  .stav-zp-headers h2 {
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 25px;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    flex-grow: 1;
-}
-
-@media (max-width:800px) {
-
-    .stav-zp{
-        padding: 0;
-    }
-
-    .stav-zp-content{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .stav-zp-headers h1 {
-        padding: 0.3rem;
-        font-size: clamp(1.5rem, 1vw, 2rem);
-        background-color: white;
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    align-items: center;
+  }
+  .odkazy {
+    gap: 10px;
+  }
 }
