Upravené tlačítka v tab window

--- a/src/components/tabWindow/TabBtn.module.scss
+++ b/src/components/tabWindow/TabBtn.module.scss
@@ -20,6 +20,7 @@
   padding: 1rem;
   text-decoration: underline;
   text-transform: uppercase;
+  background-color: white;
 }
 
 .button-selected {
@@ -35,6 +36,7 @@
   font-size: 16px;
   line-height: 0;
 
+  background-color: white;
   text-decoration: underline;
   text-transform: uppercase;
   cursor: pointer;
