--- a/src/components/tabWindow/podstarnky/Agendy.module.scss
+++ b/src/components/tabWindow/podstarnky/Agendy.module.scss
@@ -40,6 +40,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  flex-grow: 1;
   background-color: white;
   gap: 1rem;
   padding: 0.5rem 1rem;
