--- a/src/components/mainMenu/MenuItem.module.scss
+++ b/src/components/mainMenu/MenuItem.module.scss
@@ -24,7 +24,7 @@
   align-items: center;
   justify-content: center;
 
-  font-size: clamp(0.9rem, 1vw, 1.5rem);
+  font-size: 16px;
   color: $main-menu-active;
   padding: 0.5rem;
   border: none;
