--- a/src/components/tabWindow/podstarnky/AktualneDianie.module.scss
+++ b/src/components/tabWindow/podstarnky/AktualneDianie.module.scss
@@ -1,35 +1,37 @@
 @import "../../../Colors.scss";
 
 .aktualne-dianie {
-  /* background-image: url("https://cdn.pixabay.com/photo/2015/09/13/20/30/wood-938698_960_720.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; */
   background-image: linear-gradient(
     to right top,
     $gradient-left,
     $gradient-middle,
     $gradient-right
   );
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.aktualne-dianie-headers {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px;
+  background-color: white;
 }
 
 .aktualne-dianie-headers h2 {
-  flex-grow: 1;
-  padding: 0.3rem;
-  font-size: clamp(1rem, 1vw, 1.5rem);
-  font-weight: 450;
-  background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
 }
 
 .aktualne-dianie-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-content: center;
   padding: 1rem;
   gap: 1rem;
   padding: 1rem 20vw;
+  justify-content: center;
 }
 
 .aktualne-dianie-col {
@@ -50,18 +52,10 @@
   .aktualne-dianie {
     padding: 0;
   }
-
   .aktualne-dianie-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-  }
-  .aktualne-dianie-headers h2 {
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
   }
 }
