--- a/src/components/tabWindow/podstarnky/Kalendar.module.scss
+++ b/src/components/tabWindow/podstarnky/Kalendar.module.scss
@@ -7,26 +7,22 @@
     $gradient-middle,
     $gradient-right
   );
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  gap: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .kalendar-headers {
   display: flex;
-  gap: 1rem;
-  background-color: rgb(255, 255, 255);
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px;
+  background-color: white;
 }
 
 .kalendar-headers h2 {
-  flex-grow: 1;
-  padding: 0.3rem;
-  font-size: clamp(1rem, 1vw, 1.5rem);
-  font-weight: 450;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
 }
 
 .kalendar-content {
@@ -34,6 +30,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
   padding: 1rem;
+  padding: 1rem 20vw;
+  justify-content: center;
 }
 
 .kalendar-col {
@@ -41,6 +39,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 0.5rem;
+  min-width: 310px;
 }
 
 .kalendar-articles {
@@ -49,11 +48,9 @@
   gap: 1rem;
   background-color: white;
   flex-grow: 1;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .kalendar-articles-right {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: white;
   font-weight: 400;
   font-size: 16px;
@@ -88,14 +85,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-  }
-
-  .kalendar-headers h2 {
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
   }
 
   .kalendar-articles {
