--- a/src/components/tabWindow/podstarnky/Temy.module.scss
+++ b/src/components/tabWindow/podstarnky/Temy.module.scss
@@ -12,16 +12,22 @@
     $gradient-middle,
     $gradient-right
   );
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.temy-headers {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px;
+  background-color: white;
 }
 
 .temy-headers h2 {
-  flex-grow: 1;
-  padding: 0.3rem;
-  font-size: clamp(1rem, 1vw, 1.5rem);
-  font-weight: 450;
-  background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
 }
 
 .temy-content {
@@ -29,12 +35,15 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
   padding: 1rem;
+  padding: 1rem 20vw;
+  justify-content: center;
 }
 
 .temy-col {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  min-width: 310px;
 }
 
 .odkazy {
@@ -44,7 +53,6 @@
   background-color: white;
   gap: 1rem;
   padding: 0.5rem 1rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: white;
   flex-grow: 1;
 }
@@ -70,13 +78,6 @@
     gap: 1rem;
   }
 
-  .temy-headers h2 {
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
-  }
   .odkazy {
     gap: 10px;
   }
