Mapovanie Main-menu podľa toho, kde sa nechádzam na stránke.. Sfarbí sa btn.

--- a/src/components/mainMenu/MenuItem.module.scss
+++ b/src/components/mainMenu/MenuItem.module.scss
@@ -32,6 +32,11 @@
   font-weight: bold;
 }
 
+.btn-active {
+  color: $active-main-menu-btn !important;
+  font-weight: bold;
+}
+
 .menu-items {
   position: absolute;
   left: 0;
