Presunute stránky do folderu pages upravene importy

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -24,3 +24,6 @@ $gradient-right: #87d4ee;
 
 $show-mobile: 1000px;
 $active-main-menu-btn: #086300;
+
+$odpady-nadpis-od-color: #5cb343;
+$odpady-nadpis-pady-color: #6b4732;
