Pridaná stránka Odpady Pridaný dynamický breadcrumbs Pridaný side-bar(ovládanie s klavesnicou)

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -5,9 +5,11 @@ $main-menu-hover: #dadada;
 
 $tab-text-color: #11242e;
 $tab-text-color-active: #f56520;
+$odkazy-color: #f56520;
 
 $artice-title-color: #6b4732;
 $article-date-category-color: #626a6e;
+$popularny-obsah-btn-color: #f56520;
 
 $footer-text-color: #000000;
 
@@ -22,8 +24,12 @@ $gradient-left: #83cb6d;
 $gradient-middle: #e4f0ec;
 $gradient-right: #87d4ee;
 
-$show-mobile: 1000px;
 $active-main-menu-btn: #086300;
 
 $odpady-nadpis-od-color: #5cb343;
 $odpady-nadpis-pady-color: #6b4732;
+
+$breadcrumbs-color-title: #757993;
+$breadcrumbs-color-active-title: #6b4732;
+
+$show-mobile: 1000px;
