--- a/src/components/articles/SmallArticle.module.scss
+++ b/src/components/articles/SmallArticle.module.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
   overflow: hidden;
   aspect-ratio: 1 / 1;
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 0.2rem;
   background-color: white;
 }
 
